--- a/DayZServer/ServerHistory.xaml
+++ b/DayZServer/ServerHistory.xaml
@@ -268,8 +268,10 @@
                     <StackPanel Grid.Row="0" Orientation="Horizontal">
                             
                         </StackPanel>
-                    <Slider Style="{StaticResource Horizontal_Slider}" x:Name="RefreshSlider" Grid.Row="1" Minimum="1" SmallChange="1" Value="{Binding MeasureGap, Mode=TwoWay}" Maximum="60" />
-                </Grid>
+                    <Slider Style="{StaticResource Horizontal_Slider}" IsSnapToTickEnabled="True" x:Name="RefreshSlider" Grid.Row="1" Minimum="1" SmallChange="1" Value="{Binding MeasureGap, Mode=TwoWay}" Maximum="60" TickFrequency="3" />
+                        <TextBlock Name="dateText" Foreground="YellowGreen" Height="16" Width="100" Margin="353,0,-244,23" Grid.Row="1"/>
+                            
+                    </Grid>
                     <TextBlock Height="16" VerticalAlignment="Top" Foreground="YellowGreen" Width="100" HorizontalAlignment="Left" Margin="259,34,0,0"><Run Text="Refresh Interval:" /><Run Text=" "/><Run Text="{Binding Value, ElementName=RefreshSlider}" /></TextBlock>
                     <Canvas x:Name="browse_dialog" Height="207"  Width="516" Background="#FF78A41E" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="510,-232,511,102" >
                     <Button x:Name="cancel_button" Content="Cancel" Canvas.Left="364" Canvas.Top="160" Width="142" Height="37" Click="cancel_click" FontSize="18" BorderBrush="{x:Null}" Background="#FFBAF344"/>
